--- a/SF_SGL/Pages/Sistemas/Deleta.razor
+++ b/SF_SGL/Pages/Sistemas/Deleta.razor
@@ -1,6 +1,6 @@
 ﻿@page "/sistemas/deleta/{id:int}"
 
-<SF_SGL.Features.Sistema.DeletaSistemaComponent Id="@id"></SF_SGL.Features.Sistema.DeletaSistemaComponent>
+<SF_SGL.Features.Sistema.DeletaSistemaComponent id="@id"></SF_SGL.Features.Sistema.DeletaSistemaComponent>
 
 @code{
     [Parameter] public int id { get; set; }
