[Monteiro] - Alterações menores.

--- a/SF_SGL/Features/Sistema/AdicionaSistemaComponent.razor
+++ b/SF_SGL/Features/Sistema/AdicionaSistemaComponent.razor
@@ -7,7 +7,7 @@
 }
 else
 {
-<EditForm Model="@Data" OnValidSubmit="@HandleValidSubmit">
+<EditForm Model="@adicionaSistema.Data" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
     <ValidationSummary />
     <h3>Adicionar Sistema</h3>
@@ -15,25 +15,25 @@ else
     <div class="form-group row">
         <label for="Nome" class="col-sm-2 col-form-label">Nome:</label>
         <div class="col-sm-10">
-            <InputText id="Nome" class="form-control" placeholder="Nome" @bind-Value="@Data.Nome" />
+            <InputText id="Nome" class="form-control" placeholder="Nome" @bind-Value="@adicionaSistema.Data.Nome" />
         </div>
     </div>
     <div class="form-group row">
         <label for="UrlServicoConsultaLog" class="col-sm-2 col-form-label">UrlServicoConsultaLog:</label>
         <div class="col-sm-10">
-            <InputText id="UrlServicoConsultaLog" class="form-control" placeholder="UrlServicoConsultaLog" @bind-Value="@Data.UrlServicoConsultaLog" />
+            <InputText id="UrlServicoConsultaLog" class="form-control" placeholder="UrlServicoConsultaLog" @bind-Value="@adicionaSistema.Data.UrlServicoConsultaLog" />
         </div>
     </div>
     <div class="form-group row">
         <label for="UsuarioLogin" class="col-sm-2 col-form-label">UsuarioLogin:</label>
         <div class="col-sm-10">
-            <InputText id="UsuarioLogin" class="form-control" placeholder="UsuarioLogin" @bind-Value="@Data.UsuarioLogin" />
+            <InputText id="UsuarioLogin" class="form-control" placeholder="UsuarioLogin" @bind-Value="@adicionaSistema.Data.UsuarioLogin" />
         </div>
     </div>
     <div class="form-group row">
         <label for="UsuarioSenha" class="col-sm-2 col-form-label">Nome:</label>
         <div class="col-sm-10">
-            <InputText id="UsuarioSenha" class="form-control" placeholder="UsuarioSenha" @bind-Value="@Data.UsuarioSenha" />
+            <InputText id="UsuarioSenha" class="form-control" placeholder="UsuarioSenha" @bind-Value="@adicionaSistema.Data.UsuarioSenha" />
         </div>
     </div>
     <button type="submit">Cadastrar</button>
@@ -43,19 +43,20 @@ else
 
 @code {
 
-    AdicionaSistema.Command Data;
+    AdicionaSistema adicionaSistema;
     private bool erro;
 
     protected override async Task OnInitializedAsync()
     {
-        await Task.FromResult(Data = new AdicionaSistema.Command());
+        adicionaSistema = new();
+        await Task.FromResult(adicionaSistema.Data = new AdicionaSistema.Command());
     }
 
     private async Task HandleValidSubmit()
     {
         try
         {
-            Task tarefa = Task.FromResult(await _mediatr.Send(Data));
+            Task tarefa = Task.FromResult(await _mediatr.Send(adicionaSistema.Data));
 
             if (tarefa.IsCompletedSuccessfully == false)
             {
@@ -64,7 +65,7 @@ else
         }
         finally
         {
-            Data = new AdicionaSistema.Command();
+            adicionaSistema.Data = new AdicionaSistema.Command();
             NavigationManager.NavigateTo("sistemas");
         }
 
