--- a/SF.SGL.UI/Pages/Sistema/Index.razor
+++ b/SF.SGL.UI/Pages/Sistema/Index.razor
@@ -3,15 +3,18 @@
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Threading.Tasks
+@using Microsoft.Extensions.Configuration
+
+@inject IConfiguration Configuration
 @inject HttpClient Http
 
 <h2>Sistemas</h2>
 
-@if (sistemas == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
+<p>
+    <a href="/sistemas/adiciona">Adicionar Sistema</a>
+</p>
+
+@if (resultado != null)
 {
     <table class='table'>
         <thead>
@@ -24,7 +27,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var resultado in sistemas)
+            @foreach (var resultado in resultado.Resultados)
             {
                 <tr>
                     <td>@resultado.Nome</td>
@@ -39,6 +42,16 @@ else
             }
         </tbody>
     </table>
+
+    var anteriorDisabilitado = !resultado.ExistePaginaAnterior ? "disabled" : "";
+    var proximoDisabilitado = !resultado.ExisteProximaPagina ? "disabled" : "";
+
+    <button class="btn btn-primary @anteriorDisabilitado" @onclick="PaginaAnterior">Anterior</button>
+    <button class="btn btn-primary @proximoDisabilitado" @onclick="ProximaPagina">Próximo</button>
+}
+else if (retorno?.Message != null)
+{
+    @retorno.Message
 }
 
 <p>
@@ -46,24 +59,92 @@ else
 </p>
 
 @code {
-    private const string ServiceEndpoint = "https://localhost:44351/api/Sistemas/ObtemTodosSistemas";
+    private const string ServiceEndpoint = "api/Sistemas/ObtemTodosSistemasPaginado";
+    private Resultado resultado;
+    private Retorno retorno;
 
-    private Sistema[] sistemas;
     private string exceptionMessage;
 
     protected override async Task OnInitializedAsync()
     {
         try
         {
-            sistemas = await Http.GetFromJsonAsync<Sistema[]>(ServiceEndpoint);
+            UriBuilder uriBuilder = new UriBuilder(string.Concat(Configuration["EnderecoBaseSGLAPI"], ServiceEndpoint));
+            uriBuilder.Query = "sortOrder=&currentFilter=&palavraChave=&numeroPagina=&tamanhoPagina=1";
+
+            HttpResponseMessage chamadaAPI = await Http.GetAsync(uriBuilder.Uri);
+
+            if (chamadaAPI.IsSuccessStatusCode)
+            {
+                resultado = await chamadaAPI.Content.ReadFromJsonAsync<Resultado>();
+            }
+            else
+            {
+                retorno = await chamadaAPI.Content.ReadFromJsonAsync<Retorno>();
+            }
+
         }
-        catch (NotSupportedException exception)
+        catch (Exception exception)
         {
             exceptionMessage = exception.Message;
         }
     }
 
-    public class Sistema
+    protected async Task PaginaAnterior()
+    {
+
+    }
+
+    protected async Task ProximaPagina()
+    {
+        //try
+        //{
+        //    resultado.PageIndex
+        //    UriBuilder uriBuilder = new UriBuilder(string.Concat(Configuration["EnderecoBaseSGLAPI"], ServiceEndpoint));
+        //    uriBuilder.Query = "sortOrder=&currentFilter=&palavraChave=&numeroPagina=&tamanhoPagina=1";
+
+        //    HttpResponseMessage chamadaAPI = await Http.GetAsync(uriBuilder.Uri);
+
+        //    if (chamadaAPI.IsSuccessStatusCode)
+        //    {
+        //        resultado = await chamadaAPI.Content.ReadFromJsonAsync<Resultado>();
+        //    }
+        //    else
+        //    {
+        //        retorno = await chamadaAPI.Content.ReadFromJsonAsync<Retorno>();
+        //    }
+
+        //}
+        //catch (Exception exception)
+        //{
+        //    exceptionMessage = exception.Message;
+        //}
+    }
+
+    internal class Resultado
+    {
+        public string CurrentSort { get; init; }
+
+        public string NameSortParm { get; init; }
+
+        public string DateSortParm { get; init; }
+
+        public string CurrentFilter { get; init; }
+
+        public string SearchString { get; init; }
+
+        public int PageIndex { get; internal set; }
+
+        public int TotalPages { get; internal set; }
+
+        public bool ExistePaginaAnterior { get; set; }
+
+        public bool ExisteProximaPagina { get; set; }
+
+        public List<Sistema> Resultados { get; init; }
+    }
+
+    internal class Sistema
     {
         public int Id { get; set; }
 
@@ -74,5 +155,10 @@ else
         public string UsuarioLogin { get; set; }
 
         public string UsuarioSenha { get; set; }
+    }
+
+    internal class Retorno
+    {
+        public string Message { get; set; }
     }
 }
