--- a/SF.SGL.UI/Shared/NavMenu.razor
+++ b/SF.SGL.UI/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Sistema
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/sistema/teste">
+                <span class="oi oi-plus" aria-hidden="true"></span> Sistema
+            </NavLink>
+        </li>
     </ul>
 </div>
 
