--- a/SF.SGL.UI/Pages/Cadastros/Sistemas/AdicionaSistema/AdicionaSistema.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Sistemas/AdicionaSistema/AdicionaSistema.razor
@@ -4,6 +4,14 @@
 
 @using Radzen
 @using Radzen.Blazor
+@using System;
+@using System.Collections.Generic;
+@using System.Net.Http;
+@using System.Net.Http.Json;
+@using System.Threading.Tasks;
+@using Microsoft.AspNetCore.Components;
+@using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.Extensions.Configuration;
 
 <RadzenProgressBar Value="100" ShowValue="false" Max="100" Style="margin-bottom: 20px" />
 <RadzenContent Container="main">
@@ -11,7 +19,7 @@
         <RadzenHeading Size="H2" Text="Adicionar Sistema"></RadzenHeading>
         <div class="row">
             <div class="col-md-9">
-                <RadzenTemplateForm Data="@Sistema" Visible="@(Sistema != null)" TItem="Sistema" Submit="@FormSubmit">
+                <RadzenTemplateForm Data="@sistema" Visible="@(sistema != null)" TItem="Sistema" Submit="@FormSubmit">
                     <ChildContent>
                         <RadzenFieldset Text="Parametrizar sistema">
                             <div style="margin-bottom: 1rem" class="row">
@@ -19,7 +27,7 @@
                                     <RadzenLabel Text="Nome:" Component="nm_sistema" style="width: 100%"></RadzenLabel>
                                 </div>
                                 <div class="col-md-9">
-                                    <RadzenTextBox MaxLength="100" style="display: block; width: 100%" @bind-Value="@Sistema.Nome" Name="Nm_sistema">
+                                    <RadzenTextBox MaxLength="100" style="display: block; width: 100%" @bind-Value="@sistema.Nome" Name="Nm_sistema">
                                     </RadzenTextBox>
                                     <RadzenRequiredValidator Component="Nm_sistema" Text="Nome do sistema é obrigatório." style="position: absolute">
                                     </RadzenRequiredValidator>
@@ -32,7 +40,7 @@
                                         </RadzenLabel>
                                     </div>
                                     <div class="col-md-9">
-                                        <RadzenTextBox MaxLength="255" style="display: block; width: 100%" @bind-Value="@Sistema.UrlServicoConsultaLog" Name="Nm_url_servico_consulta_log">
+                                        <RadzenTextBox MaxLength="255" style="display: block; width: 100%" @bind-Value="@sistema.UrlServicoConsultaLog" Name="Nm_url_servico_consulta_log">
                                         </RadzenTextBox>
                                         <RadzenRequiredValidator Component="Nm_url_servico_consulta_log" Text="Url de acesso ao serviço é obrigatória." style="position: absolute">
                                         </RadzenRequiredValidator>
@@ -44,7 +52,7 @@
                                         </RadzenLabel>
                                     </div>
                                     <div class="col-md-9">
-                                        <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@Sistema.UsuarioLogin" Name="Nm_usuario_servico_consulta_log">
+                                        <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@sistema.UsuarioLogin" Name="Nm_usuario_servico_consulta_log">
                                         </RadzenTextBox>
                                         <RadzenRequiredValidator Component="Nm_usuario_servico_consulta_log" Text="Login do usuário de acesso ao serviço é obrigatório." style="position: absolute">
                                         </RadzenRequiredValidator>
@@ -56,7 +64,7 @@
                                         </RadzenLabel>
                                     </div>
                                     <div class="col-md-9">
-                                        <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@Sistema.UsuarioSenha" Name="Nm_senha_servico_consulta_log">
+                                        <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@sistema.UsuarioSenha" Name="Nm_senha_servico_consulta_log">
                                         </RadzenTextBox>
                                         <RadzenRequiredValidator Component="Nm_senha_servico_consulta_log" Text="Senha do usuário de acesso ao serviço é obrigatória." style="position: absolute">
                                         </RadzenRequiredValidator>
@@ -77,3 +85,96 @@
         </div>
     </ChildContent>
 </RadzenContent>
+
+@code {
+
+    protected Sistema sistema;
+
+    protected ErroRetornoAPI mensagemErro;
+
+    [Parameter(CaptureUnmatchedValues = true)]
+    public IReadOnlyDictionary<string, dynamic> Attributes { get; set; }
+
+    public void Reload()
+    {
+        InvokeAsync(StateHasChanged);
+    }
+
+    [Inject]
+    protected NavigationManager NavigationManager { get; set; }
+
+    [Inject]
+    protected DialogService DialogService { get; set; }
+
+    [Inject]
+    protected TooltipService TooltipService { get; set; }
+
+    [Inject]
+    protected NotificationService NotificationService { get; set; }
+
+    [Inject]
+    protected IConfiguration Configuration { get; set; }
+
+    [Inject]
+    protected HttpClient HttpClient { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await Load();
+    }
+
+    protected async Task Load()
+    {
+        await Task.FromResult(sistema = new());
+    }
+
+    protected async Task FormSubmit(Sistema sistema)
+    {
+        HttpResponseMessage response = await APIAdicionaSistema();
+        if (response.IsSuccessStatusCode)
+        {
+            NavigationManager.NavigateTo("cadastros/sistemas");
+        }
+        else
+        {
+            mensagemErro = await response.Content.ReadFromJsonAsync<ErroRetornoAPI>();
+            sistema = null;
+        }
+        StateHasChanged();
+    }
+
+    protected async Task<HttpResponseMessage> APIAdicionaSistema()
+    {
+        try
+        {
+            string serviceEndpoint = "api/AdicionaSistema/Adiciona";
+            UriBuilder uriBuilder = new(string.Concat(Configuration["EnderecoBaseSGLAPI"], serviceEndpoint));
+            return await HttpClient.PostAsJsonAsync(uriBuilder.Uri, sistema);
+        }
+        catch (Exception)
+        {
+            throw;
+        }
+    }
+
+    protected void ButtonCancelClick(MouseEventArgs args)
+    {
+        NavigationManager.NavigateTo("cadastros/sistemas");
+    }
+
+    public class Sistema
+    {
+        public string Nome { get; set; }
+
+        public string UrlServicoConsultaLog { get; set; }
+
+        public string UsuarioLogin { get; set; }
+
+        public string UsuarioSenha { get; set; }
+    }
+
+    public class ErroRetornoAPI
+    {
+        public string Message { get; set; }
+    }
+}
