--- a/SF.SGL.UI/Pages/Cadastros/Sistemas/EditaSistema/EditaSistema.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Sistemas/EditaSistema/EditaSistema.razor
@@ -3,9 +3,17 @@
 
 @using Radzen
 @using Radzen.Blazor
+@using System;
+@using System.Collections.Generic;
+@using System.Net.Http;
+@using System.Net.Http.Json;
+@using System.Threading.Tasks;
+@using Microsoft.AspNetCore.Components;
+@using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.Extensions.Configuration;
 
 
-@if (Sistema == null)
+@if (sistema == null)
 {
     <RadzenProgressBar Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" Style="margin-bottom: 20px" />
     <h4>Carregando...</h4>
@@ -18,7 +26,7 @@ else
             <RadzenHeading Size="H2" Text="Editar Sistema"></RadzenHeading>
             <div class="row">
                 <div class="col-md-9">
-                    <RadzenTemplateForm Data="@Sistema" Visible="@(Sistema != null)" TItem="Sistema" Submit="@FormSubmit">
+                    <RadzenTemplateForm Data="@sistema" Visible="@(sistema != null)" TItem="Sistema" Submit="@FormSubmit">
                         <ChildContent>
                             <RadzenFieldset Text="Parametrizar sistema">
                                 <div style="margin-bottom: 1rem" class="row">
@@ -26,7 +34,7 @@ else
                                         <RadzenLabel Text="Nome:" Component="nm_sistema" style="width: 100%"></RadzenLabel>
                                     </div>
                                     <div class="col-md-9">
-                                        <RadzenTextBox MaxLength="100" style="display: block; width: 100%" @bind-Value="@Sistema.Nome" Name="Nm_sistema">
+                                        <RadzenTextBox MaxLength="100" style="display: block; width: 100%" @bind-Value="@sistema.Nome" Name="Nm_sistema">
                                         </RadzenTextBox>
                                         <RadzenRequiredValidator Component="Nm_sistema" Text="Nome do sistema é obrigatório." style="position: absolute">
                                         </RadzenRequiredValidator>
@@ -39,7 +47,7 @@ else
                                             </RadzenLabel>
                                         </div>
                                         <div class="col-md-9">
-                                            <RadzenTextBox MaxLength="255" style="display: block; width: 100%" @bind-Value="@Sistema.UrlServicoConsultaLog" Name="Nm_url_servico_consulta_log">
+                                            <RadzenTextBox MaxLength="255" style="display: block; width: 100%" @bind-Value="@sistema.UrlServicoConsultaLog" Name="Nm_url_servico_consulta_log">
                                             </RadzenTextBox>
                                             <RadzenRequiredValidator Component="Nm_url_servico_consulta_log" Text="Url de acesso ao serviço é obrigatória." style="position: absolute">
                                             </RadzenRequiredValidator>
@@ -51,7 +59,7 @@ else
                                             </RadzenLabel>
                                         </div>
                                         <div class="col-md-9">
-                                            <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@Sistema.UsuarioLogin" Name="Nm_usuario_servico_consulta_log">
+                                            <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@sistema.UsuarioLogin" Name="Nm_usuario_servico_consulta_log">
                                             </RadzenTextBox>
                                             <RadzenRequiredValidator Component="Nm_usuario_servico_consulta_log" Text="Login do usuário de acesso ao serviço é obrigatório." style="position: absolute">
                                             </RadzenRequiredValidator>
@@ -63,7 +71,7 @@ else
                                             </RadzenLabel>
                                         </div>
                                         <div class="col-md-9">
-                                            <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@Sistema.UsuarioSenha" Name="Nm_senha_servico_consulta_log">
+                                            <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@sistema.UsuarioSenha" Name="Nm_senha_servico_consulta_log">
                                             </RadzenTextBox>
                                             <RadzenRequiredValidator Component="Nm_senha_servico_consulta_log" Text="Senha do usuário de acesso ao serviço é obrigatória." style="position: absolute">
                                             </RadzenRequiredValidator>
@@ -84,4 +92,128 @@ else
             </div>
         </ChildContent>
     </RadzenContent>
+}
+
+@code{
+        protected Sistema sistema;
+
+        protected ErroRetornoAPI erroRetornoAPI;
+
+        [Parameter(CaptureUnmatchedValues = true)]
+        public IReadOnlyDictionary<string, dynamic> Attributes { get; set; }
+
+        public void Reload()
+        {
+            InvokeAsync(StateHasChanged);
+        }
+
+        [Inject]
+        protected NavigationManager NavigationManager { get; set; }
+
+        [Inject]
+        protected DialogService DialogService { get; set; }
+
+        [Inject]
+        protected TooltipService TooltipService { get; set; }
+
+        [Inject]
+        protected NotificationService NotificationService { get; set; }
+
+        [Inject]
+        protected IConfiguration Configuration { get; set; }
+
+        [Inject]
+        protected HttpClient HttpClient { get; set; }
+
+        [Parameter]
+        public int id { get; set; }
+
+        protected override async Task OnInitializedAsync()
+        {
+            await Load();
+        }
+        protected async Task Load()
+        {
+            HttpResponseMessage httpResponseMessage = await APIObtemSistemaPorId(id);
+            if (httpResponseMessage.IsSuccessStatusCode)
+            {
+                sistema = await httpResponseMessage.Content.ReadFromJsonAsync<Sistema>();
+                if (erroRetornoAPI != null)
+                {
+                    erroRetornoAPI.Message = string.Empty;
+                }
+            }
+            else
+            {
+                erroRetornoAPI = await httpResponseMessage.Content.ReadFromJsonAsync<ErroRetornoAPI>();
+                sistema = null;
+            }
+        }
+
+        private async Task<HttpResponseMessage> APIObtemSistemaPorId(int id)
+        {
+            try
+            {
+                string serviceEndpoint = $"api/EditaSistema/ObtemSistemaPorId/{id}";
+                UriBuilder uriBuilder = new(string.Concat(Configuration["EnderecoBaseSGLAPI"], serviceEndpoint));
+                return await HttpClient.GetAsync(uriBuilder.Uri);
+            }
+            catch (Exception)
+            {
+                throw;
+            }
+        }
+
+        protected async Task FormSubmit()
+        {
+            HttpResponseMessage httpResponseMessage = await APIEditaSistema(id, sistema);
+            if (httpResponseMessage.IsSuccessStatusCode)
+            {
+                NavigationManager.NavigateTo("cadastros/sistemas");
+            }
+            else
+            {
+                erroRetornoAPI = await httpResponseMessage.Content.ReadFromJsonAsync<ErroRetornoAPI>();
+                sistema = null;
+                NotificationService.Notify(new NotificationMessage() { Severity = NotificationSeverity.Error, Summary = $"Error", Detail = erroRetornoAPI.Message });
+            }
+            StateHasChanged();
+        }
+
+        private async Task<HttpResponseMessage> APIEditaSistema(int id, Sistema sistema)
+        {
+            try
+            {
+                string serviceEndpoint = $"api/EditaSistema/Edita/{id}";
+                UriBuilder uriBuilder = new(string.Concat(Configuration["EnderecoBaseSGLAPI"], serviceEndpoint));
+                return await HttpClient.PutAsJsonAsync(uriBuilder.Uri, sistema);
+            }
+            catch (Exception)
+            {
+                throw;
+            }
+        }
+
+        protected void ButtonCancelClick(MouseEventArgs args)
+        {
+            NavigationManager.NavigateTo("cadastros/sistemas");
+        }
+    
+    public class Sistema
+    {
+        public int Id { get; set; }
+
+        public string Nome { get; set; }
+
+        public string UrlServicoConsultaLog { get; set; }
+
+        public string UsuarioLogin { get; set; }
+
+        public string UsuarioSenha { get; set; }
+    }
+
+    public class ErroRetornoAPI
+    {
+        public string Message { get; set; }
+    }
 }
